# internal/platform/models/task.go
@@ -1,7 +1,10 @@
 package models
 
+import "github.com/google/uuid"
+
 type Task struct {
-	Id    string
-	Title     string
-	Completed bool
+	Id             string
+	Title          string
+	Completed      bool
+	OrganizationId uuid.UUID
 }
