# internal/workstream-gateway/routes/task_routes.go
@@ -4,15 +4,17 @@ import (
 	"net/http"
 
 	"github.com/danilobml/workstream/internal/workstream-gateway/handlers"
+	"github.com/danilobml/workstream/internal/workstream-gateway/middleware"
 )
 
-func RegisterTaskRoutes(handler *handlers.TasksHandler) http.Handler {
+func RegisterTaskRoutes(taskHandler *handlers.TasksHandler, auth middleware.Middleware) http.Handler {
 	mux := http.NewServeMux()
 
-	mux.HandleFunc("POST /", handler.CreateNewTask)
-	mux.HandleFunc("GET /", handler.GetTasks)
-	mux.HandleFunc("GET /{id}", handler.GetTask)
-	mux.HandleFunc("POST /{id}/complete", handler.CompleteTask)
+	// public(protected)
+	mux.Handle("POST /tasks", auth(http.HandlerFunc(taskHandler.CreateNewTask)))
+	mux.Handle("GET /tasks", auth(http.HandlerFunc(taskHandler.GetTasks)))
+	mux.Handle("GET /tasks/{id}", auth(http.HandlerFunc(taskHandler.GetTask)))
+	mux.Handle("POST /tasks/{id}/complete", auth(http.HandlerFunc(taskHandler.CompleteTask)))
 
 	return mux
 }
